kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waittime-api-service
  namespace: waittime-api
spec:
  selector:
    app: waittime-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
