kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waittime-api-ingress
  namespace: waittime-api
spec:
  ingressClassName: traefik
  rules:
  - host: waittimewizard.info
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: waittime-api-service
            port:
              number: 80
  - host: www.waittimewizard.info
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: waittime-api-service
            port:
              number: 80
  tls:
  - hosts:
    - waittimewizard.info
    - www.waittimewizard.info
    secretName: waittime-api-tls
